--- a/RESTServices/RESTServices/RESTServices.csproj
+++ b/RESTServices/RESTServices/RESTServices.csproj
@@ -59,14 +59,19 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Service1.svc" />
+    <Content Include="Hora.svc" />
+    <Content Include="Mensajes.svc" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Service1.svc.cs">
-      <DependentUpon>Service1.svc</DependentUpon>
+    <Compile Include="Hora.svc.cs">
+      <DependentUpon>Hora.svc</DependentUpon>
     </Compile>
-    <Compile Include="IService1.cs" />
+    <Compile Include="IHora.cs" />
+    <Compile Include="Mensajes.svc.cs">
+      <DependentUpon>Mensajes.svc</DependentUpon>
+    </Compile>
+    <Compile Include="IMensajes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
